--- a/challenges/index.html
+++ b/challenges/index.html
@@ -3,140 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Final Challenge</title>
+  <title>Day 01</title>
+
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-    <div class="container nav__row">
-      <button class="nav-toggle" aria-label="open navigation">
-        <span class="hamburger"></span>
-      </button>
-      <a class="logo">
-        <img src="../img/logo.svg" alt="">
-      </a>
-      <nav class="nav">
-        <div class="primary-nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">home</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">about</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
-          </ul>
-        </div>
-        <div class="secondary-nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">sign in</a></li>
-            <li class="nav__item"><a href="#" class="nav__link nav__link-button">sign up</a></li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </header>
-
-  <section class="hero">
-    <div class="container">
-      <div class="hero__content row">
-        <h1 class="section__title">
-          Responsive layouts
-          <span class="section__title-alt-color">don't have to be a struggle</span>
-        </h1>
-        <div class="hero__right">
-          <div class="hero__right__content">
-            <p class="hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button class="hero__button">i want to learn</button>    
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <main class="main">
-    <section class="container main-row">
-      <div class="col">
-        <h2 class="main__title">Mobile-first</h2>
-        <p class="main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      </div>
-      <div class="col">
-        <h2 class="main__title">Efficient</h2>
-        <p class="main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      </div>
-      <div class="col">
-        <h2 class="main__title">Done right</h2>
-        <p class="main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      </div>
-    </section>
-  </main>
-  <section class="secondary container row">
-    <div class="col secondary__content">
-      <h2 class="secondary__title">It doesn’t have to be so hard</h2>
-      <p class="secondary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      <img src="../img/the-image.jpg" alt="3 drawings of outlines">
-      <p class="secondary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-    </div>
-    <aside class="aside col">
-      <article class="article">
-        <div class="article__container">
-          <h2 class="article__title">Break it down</h2>
-          <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </article>
-      <article class="article">
-        <div class="article__container">
-          <h2 class="article__title">Work your way up</h2>
-          <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </article>
-      <article class="article">
-        <div class="article__container">
-          <h2 class="article__title">Break it down</h2>
-          <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </article>
-    </aside>
-  </section>
-  <footer class="footer">
-    <div class="container">
-      <h1 class="footer__title">just scratching the surface</h1>
-      <div class="footer__row">
-        <div class="footer-text">
-          <h2 class="footer-nav__title">About our company</h2>
-          <p class="footer-nav__link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        </div>
-        <nav class="footer-nav">
-          <div class="nav-1">
-            <ul class="footer-nav__list">
-              <li class="footer-nav__title">Getting around</li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Home</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">About</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Contact</a></li>
-            </ul>
-          </div>
-          <div class="nav-2">
-            <ul class="footer-nav__list">
-              <li class="footer-nav__title">Other things</li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Lorem ipsum</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">dolor</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">sit amet</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">consectetur</a></li>
-            </ul>
-          </div>
-          <div class="nav-3">
-            <ul class="footer-nav__list">
-              <li class="footer-nav__title">And more</li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Lorem ipsum</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">dolor</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">sit amet</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">consectetur</a></li>
-            </ul>
-          </div>  
-        </nav>
-      </div>
-    </div>
-  </footer>
-  <script src="main.js"></script>
+  <div class="parent">
+    <div class="child"></div>
+  </div>
 </body>
 </html>
-
-<!-- This is clone attempt proof -->
