--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -8,55 +8,46 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="hero">
-    <div class="container">
-      <h2 class="hero__subtitle">lorem ipsum sit</h2>
-      <h1 class="hero__title">Responsive layouts don't have to be a struggle</h1>
+ <section class="intro">
+  <div class="container">
+    <p class="intro__text"></p>
+    <h1 class="intro__title"></h1>
+  </div>
+ </section>
+ <section class="section-two">
+  <div class="container">
+    <h2 class="section-title section-title--dark"></h2>
+    <div class="row">
+      <div class="col">
+        <p></p>
+      </div>
+      <div class="col">
+        <p></p>
+      </div>
     </div>
   </div>
-
-  <section class="section">
-    <div class="container">
-      <h3 class="section__title">Quality Designs</h3>
-        <div class="section__content">
-          <div class="row">
-            <p class="col section__primary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu felis. Sociis natoque penatibus et magnis dis.</p>
-            <p class="col section__secondary-text">Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
-          </div>
-        </div>
+ </section>
+ <section class="section-three">
+  <div class="container row">
+    <div class="col">
+      <h2 class="section-title"></h2>
+      <p></p>
     </div>
-  </section>
-
-  <article class="article__main">
-    <div class="container">
-      <div class="article__content">
-        <div class="row">
-          <div class="col">
-           <h3 class="article__title">Made custom for you</h3>
-           <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-          </div>
-          <div class="article__main--content col">
-            <img class="article__img" src="./image-01.jpg" alt="overlooking the sunset on mountain">
-          </div>
-        </div>
-      </div>
+    <div class="col">
+      <img src="image-01.jpg" alt="a sunset over a mountain range">
     </div>
-  </article>
-  
-  <article class="article__secondary">
-    <div class="container">
-      <div class="article__content">
-        <div class="row">
-          <div class="article__secondary--content col">
-            <img class="article__img" src="./image-02.jpg" alt="sunrise over mountains and clouds">
-          </div>
-          <div class="col">
-            <h3 class="article__title">Created with care</h3>
-            <p class="article__text">Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
-          </div>
-        </div>  
-      </div>
+  </div>
+ </section>
+ <section class="section-four">
+  <div class="container row">
+    <div class="col">
+      <img src="image-02.jpg" alt="a sunset over a mountain range with tree branches in the foreground">
     </div>
-  </article>
+    <div class="col">
+      <h2 class="section-title"></h2>
+      <p></p>
+    </div>
+  </div>
+ </section>
 </body>
 </html>
