--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -4,25 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flexbox Challenge #4</title>
-  <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
  <section class="intro">
   <div class="container">
-    <p class="intro__text"></p>
-    <h1 class="intro__title"></h1>
+    <p class="intro__text">lorem ipsum sit</p>
+    <h1 class="intro__title">Responsive layouts don’t<br> have to be a struggle</h1>
   </div>
  </section>
  <section class="section-two">
   <div class="container">
-    <h2 class="section-title section-title--dark"></h2>
+    <h2 class="section-title section-title--dark">Quality Designs</h2>
     <div class="row">
       <div class="col">
-        <p></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu felis. Sociis natoque penatibus et magnis dis.</p>
       </div>
       <div class="col">
-        <p></p>
+        <p>Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
       </div>
     </div>
   </div>
@@ -30,8 +30,8 @@
  <section class="section-three">
   <div class="container row">
     <div class="col">
-      <h2 class="section-title"></h2>
-      <p></p>
+      <h2 class="section-title">Made custom for you</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
     </div>
     <div class="col">
       <img src="image-01.jpg" alt="a sunset over a mountain range">
@@ -44,8 +44,8 @@
       <img src="image-02.jpg" alt="a sunset over a mountain range with tree branches in the foreground">
     </div>
     <div class="col">
-      <h2 class="section-title"></h2>
-      <p></p>
+      <h2 class="section-title">Created with care</h2>
+      <p>Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.</p>
     </div>
   </div>
  </section>
