--- a/final-challenge/index.html
+++ b/final-challenge/index.html
@@ -50,11 +50,11 @@
           <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
         <div class="col">
-          <h2 class="section__title"></h2>
+          <h2 class="section__title">Efficient</h2>
           <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
         <div class="col">
-          <h2 class="section__title"></h2>
+          <h2 class="section__title">Done right</h2>
           <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
       </div>
